# pyrigremote

./: .gitignore  README.md  build.sh  compile_resources.sh  pyproject.toml  update_version.py
pyrigremote/: __init__.py  connectdialog.py  digitwidget.py  freqdisplay.py  main.py  modepanel.py  resources.py  resources.qrc  serialthread.py  smeter.py  toolbar.py
pyrigremote/images/: mknumbers.sh
