# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[project]
name = "pyrigremote"
description = "An application to control radios via the serial port"
version = "0.0.1"
authors = [
  { name="Niels Moseley", email="sofascener@gmail.com" },
]
dependencies = [
    "pyside6"
]

readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
include = ["pyrigremote*"]

#[tool.setuptools.packages.find]
#where = ["src"]  # list of folders that contain the packages (["."] by default)

[project.scripts]
pyrigremote = "pyrigremote.main:main"

[project.urls]
"Homepage" = "https://github.com/trcwm/pyrigremote"
"Bug Tracker" = "https://github.com/trcwm/pyrigremote/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
